[package]
name = "letterboxd-compare"
version = "0.1.0"
authors = ["Vishnunarayan K I <appukuttancr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
askama = "0.8"
scraper = "0.12.0"
anyhow = "1.0.35"
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
thiserror = "1.0"
